--- a/.github/workflows/playwright-scheduled.yml
+++ b/.github/workflows/playwright-scheduled.yml
@@ -5,7 +5,7 @@ on:
   # Triggers the workflow nightly
   schedule: 
     # nightly
-    - cron: '1 1 1 1 1'
+    - cron: '21 8 7 12 *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
